--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "rc-time-picker": "^3.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
