--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\realb\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
+    "python.pythonPath": "/Users/liberrhythm/virtualenvs/tantrum-employee-schedule-generator-fFyXmUwI/bin/python"
 }
