--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "moment": "^2.24.0",
     "rc-time-picker": "^3.7.2",
     "react": "^16.10.2",
+    "react-big-calendar": "^0.23.0",
+    "react-calendar": "^2.19.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
